Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjTextRetText.quorum
class Main
    action Main
        Yoda<Text, Text, text> yoda
        text y = yoda:useForce("green", "green")
        output "passed"
     end
end
