Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriTextRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, text> yoda
        boolean y = yoda("green", "green", true)
     end
end
